--- a/DXApplication1/sysSales/sysSales.csproj
+++ b/DXApplication1/sysSales/sysSales.csproj
@@ -5,7 +5,7 @@
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{373FEC3C-21BE-46CE-82C3-EDA6A0B5E2E2}</ProjectGuid>
+    <ProjectGuid>{582B4545-9ACD-4D35-8C31-2D28C223057E}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>sysSales</RootNamespace>
@@ -77,10 +77,6 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Main\" />
-    <Folder Include="Sub\" />
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\..\SalesDB\SalesDB.csproj">
       <Project>{5f4c25ab-778d-4cf4-a98b-046bbd320511}</Project>
       <Name>SalesDB</Name>
@@ -89,6 +85,11 @@
       <Project>{ba436fd5-1aa3-48f3-8caf-9645ecfc04ab}</Project>
       <Name>Tools</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="IForms\" />
+    <Folder Include="Main\" />
+    <Folder Include="Sub\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
