Modification in "frmMain" + "Tools"

--- a/DXApplication1/sysSales/sysSales.csproj
+++ b/DXApplication1/sysSales/sysSales.csproj
@@ -54,6 +54,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IForms\Ifrm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="IForms\Ifrm.Designer.cs">
+      <DependentUpon>Ifrm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Main\frmMain.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -62,6 +68,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="IForms\Ifrm.resx">
+      <DependentUpon>Ifrm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Main\frmMain.resx">
       <DependentUpon>frmMain.cs</DependentUpon>
     </EmbeddedResource>
@@ -98,7 +107,6 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="IForms\" />
     <Folder Include="Sub\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
