--- a/DXApplication1/sysSales/sysSales.csproj
+++ b/DXApplication1/sysSales/sysSales.csproj
@@ -41,7 +41,10 @@
     <Reference Include="DevExpress.XtraBars.v18.1" />
     <Reference Include="DevExpress.Sparkline.v18.1.Core" />
     <Reference Include="DevExpress.XtraEditors.v18.1" />
+    <Reference Include="DevExpress.XtraGrid.v18.1, Version=18.1.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.XtraLayout.v18.1, Version=18.1.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.XtraNavBar.v18.1, Version=18.1.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.XtraPrinting.v18.1, Version=18.1.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -60,6 +63,12 @@
     <Compile Include="IForms\Ifrm.Designer.cs">
       <DependentUpon>Ifrm.cs</DependentUpon>
     </Compile>
+    <Compile Include="IForms\IfrmList.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="IForms\IfrmList.Designer.cs">
+      <DependentUpon>IfrmList.cs</DependentUpon>
+    </Compile>
     <Compile Include="Main\frmMain.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -70,6 +79,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="IForms\Ifrm.resx">
       <DependentUpon>Ifrm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="IForms\IfrmList.resx">
+      <DependentUpon>IfrmList.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Main\frmMain.resx">
       <DependentUpon>frmMain.cs</DependentUpon>
@@ -108,6 +120,9 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Sub\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\user_Add.svg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
