--- a/SalesDB/SalesDB.csproj
+++ b/SalesDB/SalesDB.csproj
@@ -111,7 +111,6 @@
     <Compile Include="DB\Compte_Local_Type.cs">
       <DependentUpon>DBSales.tt</DependentUpon>
     </Compile>
-    <Compile Include="Proc_DB\CRUD.cs" />
     <Compile Include="DB\DBSales.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -181,7 +180,6 @@
     <Compile Include="DB\Fournisseur.cs">
       <DependentUpon>DBSales.tt</DependentUpon>
     </Compile>
-    <Compile Include="Proc_DB\IData.cs" />
     <Compile Include="DB\Impot.cs">
       <DependentUpon>DBSales.tt</DependentUpon>
     </Compile>
@@ -251,7 +249,6 @@
     <Compile Include="DB\Produit_Type.cs">
       <DependentUpon>DBSales.tt</DependentUpon>
     </Compile>
-    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DB\Recu_Achat.cs">
       <DependentUpon>DBSales.tt</DependentUpon>
     </Compile>
@@ -259,9 +256,6 @@
       <DependentUpon>DBSales.tt</DependentUpon>
     </Compile>
     <Compile Include="DB\Recu_Vente.cs">
-      <DependentUpon>DBSales.tt</DependentUpon>
-    </Compile>
-    <Compile Include="DB\sysdiagram.cs">
       <DependentUpon>DBSales.tt</DependentUpon>
     </Compile>
     <Compile Include="DB\Traitement.cs">
@@ -273,6 +267,9 @@
     <Compile Include="DB\Unite_Type.cs">
       <DependentUpon>DBSales.tt</DependentUpon>
     </Compile>
+    <Compile Include="Proc_DB\CRUD.cs" />
+    <Compile Include="Proc_DB\IData.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Tools\Tools.csproj">
@@ -285,14 +282,16 @@
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>DBSales.Designer.cs</LastGenOutput>
     </EntityDeploy>
-  </ItemGroup>
-  <ItemGroup>
     <None Include="App.Config" />
     <None Include="DB\DBSales.edmx.diagram">
       <DependentUpon>DBSales.edmx</DependentUpon>
     </None>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="DB\DBSales.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
@@ -304,9 +303,6 @@
       <DependentUpon>DBSales.edmx</DependentUpon>
       <LastGenOutput>DBSales.cs</LastGenOutput>
     </Content>
-  </ItemGroup>
-  <ItemGroup>
-    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
